# inside_voice

./: .gitignore  BOM.md  CLAUDE.md  README.md  SETUP.md  SYSTEM_DESIGN.md
app/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pubspec.yaml
app/lib/: main.dart
app/lib/ble/: ble_constants.dart  ble_service.dart  sync_service.dart
app/lib/logging/: recording_service.dart  session_store.dart
app/lib/ui/: home_screen.dart  sessions_screen.dart
app/test/: widget_test.dart
firmware/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  prj.conf
firmware/boards/: xiao_ble_nrf52840_sense.overlay
firmware/src/: main.c
firmware/src/app/: config.c  config.h  data_cache.c  data_cache.h  monitor.c  monitor.h
firmware/src/audio/: pdm_capture.c  pdm_capture.h  sound_level.c  sound_level.h
firmware/src/ble/: ble_manager.c  ble_manager.h  config_service.c  config_service.h
firmware/src/feedback/: led.c  led.h  vibration.c  vibration.h
